Раздел Настройки. кнопки оставить отзыв, поделиться, о приложении, оценить и выход

--- a/app/src/main/res/drawable/style_btn2.xml
+++ b/app/src/main/res/drawable/style_btn2.xml
@@ -3,5 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="2dp" android:color="@color/colorGreen"/>
     <corners android:radius="20dp"/>
-    <solid android:color="@color/colorBlack20"/>
+    <solid android:color="@color/colorWhite"/>
 </shape>
+
