--- a/app/src/main/res/layout/activity_four.xml
+++ b/app/src/main/res/layout/activity_four.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/main_background"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -29,15 +30,14 @@
                 style="@style/textViewZagolovok"
                 android:text="@string/settings"/>
 
-            <Switch
-                android:id="@+id/switch1"
+            <CheckBox
+                android:id="@+id/checkbox"
                 android:layout_width="match_parent"
                 android:layout_marginTop="20dp"
                 android:textSize="24sp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:textStyle="italic"
-                android:checked="true"
                 android:padding="5dp"
                 style="@style/button_style_settings"
                 android:layout_height="wrap_content"
@@ -75,12 +75,23 @@
                 style="@style/button_style_settings"
                 android:paddingLeft="5dp"
                 android:textSize="20sp"
+                android:paddingRight="5dp"
+                android:textAllCaps="false"
+                android:layout_marginBottom="10dp"
+                android:text="@string/write"/>
+
+            <Button
+                android:id="@+id/feedback"
+                style="@style/button_style_settings"
+                android:paddingLeft="5dp"
+                android:textSize="20sp"
                 android:textAllCaps="false"
                 android:paddingRight="5dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/feedback"/>
 
             <Button
+                android:id="@+id/share"
                 style="@style/button_style_settings"
                 android:paddingLeft="5dp"
                 android:textSize="20sp"
@@ -90,6 +101,7 @@
                 android:text="@string/share"/>
 
             <Button
+                android:id="@+id/about_app"
                 style="@style/button_style_settings"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
@@ -98,6 +110,7 @@
                 android:text="@string/About_the_app"/>
 
             <Button
+                android:id="@+id/estimate"
                 style="@style/button_style_settings"
                 android:paddingLeft="5dp"
                 android:textSize="20sp"
@@ -107,6 +120,7 @@
                 android:text="@string/estimate"/>
 
             <Button
+                android:id="@+id/exit"
                 style="@style/button_style_settings"
                 android:paddingLeft="5dp"
                 android:textSize="20sp"
