--- a/app/src/main/res/layout/activity_one.xml
+++ b/app/src/main/res/layout/activity_one.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/main_background"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -20,14 +21,8 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorOrange"
-                    android:text="@string/basics_java"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="40sp"
-                    android:textStyle="bold" />
+                    style="@style/textViewZagolovok"
+                    android:text="@string/basics_java"/>
 
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -36,7 +31,7 @@
                     android:layout_height="match_parent"
                     android:padding="4dp"
                     android:scrollbars="vertical"
-                    android:background="@color/colorGrey"/>
+                    android:background="@drawable/main_background"/>
 
 
 
