--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,8 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+
+
     <style name="textViewVersionName">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -100,6 +102,7 @@
     <style name="MyCardViewText" parent="Theme.AppCompat.Light">
         <item name="cardCornerRadius">4dp</item>
         <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/coda</item>
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
